fixed segment_duration stream-local override; fixed settings overwriting on ech start; added date format option; removed old titles in html

--- a/static/list.html
+++ b/static/list.html
@@ -48,6 +48,7 @@
     </div>
 </div>
 <script>
+    $('.navbar-brand').text(window.location.host);
     $.getJSON('live/', function (data) {
         $.each(data, function (k, v) {
             var lastDot = v.name.lastIndexOf('.');
