updated js libs; fixed a typo

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,9 @@
     <meta name="theme-color" content="#000000">
     <meta name="msapplication-navbutton-color" content="#000000">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <script src="clappr.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clappr/0.3.1/clappr.js"
+            integrity="sha256-6OENSp3mOf5QiCgt6RH/4cOtWEVQ1HMZk/+h9ds5Ipc="
+            crossorigin="anonymous"></script>
     <style>
         body {
             background: #000000;
